--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@ body {
     background-color: #ffffff;
     margin: 0;
     padding: 30px;
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+    justify-content: center;
 }
 h1 {
     text-align: center;
@@ -16,13 +21,19 @@ h1, h2 {
     color: #444;
 }
 
-input[type="text"] {
-    width: 100%;
+#searchInput{
+    width: 300px;
+    min-width: 10vw;
+    height: 30px;
+    border-radius: 2px;
     padding: 10px;
-    margin-bottom: 20px;
     border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
+    font-size: 16px;
+    float: center;
+}
+#searchInput:focus{
+    outline: none;
+    border: 1px solid dodgerblue;
 }
 
 ul {
