added s3 instead of local roms folder

--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ body {
     padding: 30px;
     display: flex;
     flex-direction: column;
-
     align-items: center;
     justify-content: center;
 }
@@ -20,8 +19,7 @@ h1 {
 h1, h2 {
     color: #444;
 }
-
-#searchInput{
+#searchInput {
     width: 300px;
     min-width: 10vw;
     height: 30px;
@@ -29,37 +27,62 @@ h1, h2 {
     padding: 10px;
     border: 1px solid #ccc;
     font-size: 16px;
-    float: center;
 }
-#searchInput:focus{
+#searchInput:focus {
     outline: none;
     border: 1px solid dodgerblue;
 }
-
 ul {
     list-style-type: none;
     padding: 0;
 }
-
 li {
     margin: 5px 0;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    border-bottom: 1px solid #ccc;
 }
-
-a{
+li div.name {
+    max-width: 50%;
+    word-wrap: break-word;
+}
+li div.links {
+    padding: 5px;
+}
+li div.links a {
+    text-decoration: underline;
+    color: dodgerblue;
+    margin: 0 5px;
+}
+a {
     text-decoration: none;
     color: dodgerblue;
 }
-a:hover{
+a:hover {
     text-decoration: underline;
 }
-a:visited{
+a:visited {
     color: dodgerblue;
 }
-
 .hidden {
     display: none;
 }
-
 .determiner > ul {
     margin-left: 30px;
+}
+div.container {
+    width: 500px;
+}
+.loading {
+    text-align: center;
+    padding: 20px;
+    font-size: 1.2em;
+    color: #666;
+}
+.error {
+    color: #dc3545;
+    text-align: center;
+    padding: 20px;
+    margin: 20px 0;
 }
